iRedMail-1.0:
    * Supports new distribution release:
        + OpenBSD 6.5
        + Debian 10

    * Drop support for old distribution releases:
        - OpenBSD 6.4
        - Ubuntu 16.04, 18.10.

            NOTE: We have no plan to support non-LTS edition anymore, only the
            latest LTS edition will be supported.

    * Improvements:
        + OpenDMARC integration on Linux and FreeBSD.

            Unfortunately the latest OpenBSD release (6.5) doesn't offer
            binary package for opendmarc, but 6.6 does. We have to wait for
            OpenBSD 6.6 to enable OpenDMARC integration.

        + Dovecot:
            - Enable quota-status service. Postfix can query this service and
              reject email immediately if user's mailbox is over quota.
            - Enable tracking user loast login time by default for
              MySQL/MariaDB and OpenLDAP backends.
              Note: Dovecot doesn't support this with PostgreSQL yet.

        + netdata: Disable sending anonymous statistics to netdata cloud.

    * Fixed issues:
        - Improper order of restriction rules in Postfix
          `smtpd_sender_restrictions` setting.
        - Fail2ban jail config file doesn't correctly set sshd port number(s).
        - Loose Fail2ban filter rules (postfix/dovecot) to reduce negative bans.
        - [Linux] Not send kill signal to php-fpm daemon process to reopen log
          file after logrotation.
        - tools/create_mail_user_OpenLDAP.py:
            - Fix missing comma which causes incorrect value of
              ldap attribute 'enabledService'.
              Thanks Michael Chong.

    * Updated packages:
        + Roundcube webmail -> 1.3.9
        + iRedAdmin -> 0.9.7
        + iRedAPD -> 3.0
        + mlmmjadmin -> 2.1
        + netdata -> 1.16.0
        + php -> 7.2 (FreeBSD only)

iRedMail-0.9.9 (Dec 17, 2018):
    * Supports new distribution release:
        + OpenBSD 6.4