@@ -53,8 +53,6 @@ export STORAGE_NODE="${STORAGE_NODE:=vmail1}"
 export ENABLE_BACKEND_OPENLDAP='YES'
 export ENABLE_BACKEND_PGSQL='YES'
 export ENABLE_BACKEND_MARIADB='YES'
-# OpenBSD built-in LDAP daemon
-export ENABLE_BACKEND_LDAPD='NO'
 
 # For better distributed deployment
 #
@@ -569,8 +567,6 @@ elif [ X"${DISTRO}" == X'FREEBSD' ]; then
 elif [ X"${DISTRO}" == X'OPENBSD' ]; then
     export SYS_GROUP_ROOT='wheel'
 
-    export ENABLE_BACKEND_LDAPD='YES'
-
     # Package management.
     export install_pkg='install_pkg_openbsd'
     export remove_pkg='pkg_delete'
@@ -700,6 +696,5 @@ fi
 
 # Backup script file names.
 export BACKUP_SCRIPT_LDAP_NAME='backup_openldap.sh'
-export BACKUP_SCRIPT_LDAPD_NAME='backup_ldapd.sh'
 export BACKUP_SCRIPT_MYSQL_NAME='backup_mysql.sh'
 export BACKUP_SCRIPT_PGSQL_NAME='backup_pgsql.sh'
