@@ -1,35 +1,0 @@
-#!/usr/bin/env bash
-
-# Author:   Zhang Huangbin (zhb _at_ iredmail.org)
-
-#---------------------------------------------------------------------
-# This file is part of iRedMail, which is an open source mail server
-# solution for Red Hat(R) Enterprise Linux, CentOS, Debian and Ubuntu.
-#
-# iRedMail is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# iRedMail is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with iRedMail.  If not, see <http://www.gnu.org/licenses/>.
-#---------------------------------------------------------------------
-
-# Variables for OpenBSD ldapd(8).
-
-# RC script
-export LDAPD_RC_SCRIPT_NAME='ldapd'
-
-# Config file
-export LDAPD_CONF='/etc/ldapd.conf'
-
-# Schema directory
-export LDAPD_SCHEMA_DIR='/etc/ldap'
-
-# Data directory.
-export LDAPD_DATA_DIR='/var/db/ldap'
